# university-part-v

./: .gitignore
Podstawy sztucznej inteligencji w języku Python/: .gitignore
Podstawy sztucznej inteligencji w języku Python/AI_lecture_exam/: Co jest argumentem funkcji aktywacji neuronu.docx
Podstawy sztucznej inteligencji w języku Python/Laboratorium/: .gitignore  PodstawySztucznejInteligencji - kolokwium.docx  kokos.py  kolokwium.py
Podstawy sztucznej inteligencji w języku Python/Laboratorium/ai_kolokwium/: Augumentacja.txt  Keras - rozgałęzienia.txt  Sieć konwulacyjna.txt  ai.txt  kolokwium.py  kolokwium_II.py  zadanko.txt
Podstawy sztucznej inteligencji w języku Python/Laboratorium/arkusze/: data.csv
Podstawy sztucznej inteligencji w języku Python/Laboratorium/lab01/: korelacja.py  lab03.py  main.py
Podstawy sztucznej inteligencji w języku Python/Laboratorium/lab02/: 1.Regresja_liniowa.py  lab02.py  lab02_zadania.py
Podstawy sztucznej inteligencji w języku Python/Laboratorium/lab03/: 2. kNN_SVM.py  zadania.py
Podstawy sztucznej inteligencji w języku Python/Laboratorium/lab04/: new_selected_samples.csv  zadania.py
Programowanie w języku SWIFT/Laboratorium/: grupaD.swift  lab01.swift  lab02.swift  lab03.swift  lab04.swift  lab05.swift  lab06.swift  lab07.swift  lab08.swift  lab09_kolokwium.swift  lab11.swift  lab12.swift  lab13_kolokwium.swift
Systemy Wbudowane/Laboratorium/: lab06.c  lab07.c  lab07_2.c  lab07_3.c
Systemy Wbudowane/sys_wbud/: DoKolokwium2.txt
Zaawansowana inżynieria oprogramowania/Laboratorium/: Wejściówka - Diagramy Klasy.docx  diagram_klas.vpp  diagram_klas.vpp.bak_000f  diagram_klas.vpp.bak_001d  diagram_klas.vpp.bak_002d  diagram_klas.vpp.bak_003d  projekt.docx
Zaawansowane programowanie obiektowe C++/Laboratorium/kolokwium_I/: CMakeLists.txt  main.cpp
Zaawansowane programowanie obiektowe C++/Laboratorium/kolokwium_II/: CMakeLists.txt  KOLOKWIUM_CPP.txt  main.cpp
Zaawansowane programowanie obiektowe C++/Laboratorium/lab06/: CMakeLists.txt  Person.h  Print.h  main.cpp
(+167 files in other folders)
